# pdca-code-generation-process

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Human Working Agreements.md  PRIVACY.md  README.md  install-hooks.sh
claude-skill/: .env.example  Agent.md  BUILD.md  PDCA-SKILL-CHANGELOG.md  README.md  build-scaffold.sh  build-skill.ps1  build-skill.sh  install-skill.ps1  install-skill.sh  pdca-framework-beads.skill  pdca-framework.skill  pdca-scaffold.skill  pyproject.toml  run-evals.sh  run-tests.sh
claude-skill/eval/: README.md  executor.py  mechanical.py  reporter.py  schema.py  trigger-eval.json  trigger-optimization-report.json
claude-skill/eval/rubrics/: rubric_1a.py  rubric_1b.py  rubric_2.py  rubric_3.py  rubric_4.py
claude-skill/eval/scenarios/: 1a_scenarios.json  1b_scenarios.json  2_scenarios.json  3_scenarios.json  4_scenarios.json
claude-skill/pdca-framework/: SKILL.md
claude-skill/pdca-scaffold/: SKILL.md
claude-skill/pdca-scaffold-workspace/iteration-1/: benchmark.json  benchmark.md  feedback.json
claude-skill/pdca-scaffold-workspace/iteration-2/: benchmark.json  benchmark.md
claude-skill/pdca-scaffold/evals/: evals.json
claude-skill/pdca-scaffold/references/: discovery-guide.md  generation-templates.md  refinement-protocol.md
claude-skill/src/beads-addon/: SKILL-beads.md
claude-skill/src/core/: SKILL.md
claude-skill/src/references/: act-prompts.md  check-prompts.md  do-prompts.md  plan-prompts.md  (+1 more)
claude-skill/tests/: test_build.py  test_evals.py  test_evals_reporter.py  test_executor.py  test_mechanical.py  test_schema.py
(+118 files in other folders)
